--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -3,7 +3,7 @@
 @import '/src/assets/theme.scss';
 
 mat-toolbar {
-    box-shadow: 0 0 10px mat.get-color-from-palette($mat-shadow, 500);
+    box-shadow: 0 0 25px gray;
     position: sticky;
     top: 0;
     z-index: 10;
