Added custom green color palette for light theme

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -11,6 +11,6 @@
     </mat-sidenav>
     <mat-sidenav-content>
         <!--<router-outlet></router-outlet>-->
-        <app-dashboard></app-dashboard>
+        <app-home-page></app-home-page>
     </mat-sidenav-content>
 </mat-sidenav-container>
