--- a/src/app/home-page/home-page.component.html
+++ b/src/app/home-page/home-page.component.html
@@ -1,8 +1,7 @@
 <div class="main-div">
     <div class="banner">
         <div class="banner-text vertical-spacer">
-            <span class="mat-display-2 banner-title">Smart Notes</span>
-            <span class="mat-headline banner-subtitle">Your notes just became smarter!</span>
+            <div class="mat-title">Hello</div>
         </div>
     </div>
 </div>
